src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Added_at_Prostho_Exam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added at Prostho Exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Celigo_Product_Group_Internal_Order__c</fullName>
        <label>Celigo Product Group Internal Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Celigo_Product_Group_Quantity__c</fullName>
        <label>Product Group Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Celigo_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Celigo Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Longer Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>remove</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>